--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ color:black;
 text-shadow: 3px 2px red;}
 .parallax {
   /* The image used */
-  background-image: url("../kevin-laminto-osKdw8ih23U-unsplash.jpg");
+  background-image: url("image/kevin-laminto-osKdw8ih23U-unsplash.jpg");
 
   /* Set a specific height */
   min-height: 700px;
