--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ width:100%;
 height:1300px;
 position:relative;
 overflow:hidden;
-background:url("../miroslava-WCm0wjn1y04-unsplash.jpg");
+background:url("image/miroslava-WCm0wjn1y04-unsplash.jpg");
 background-size:cover;
 }
 
