--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ width:100%;
 height:1300px;
 position:relative;
 overflow:hidden;
-background:url("image/miroslava-WCm0wjn1y04-unsplash.jpg");
+background:url("https://github.com/Yashggoswami/Tour-Website.github.io/blob/master/image/miroslava-WCm0wjn1y04-unsplash.jpg");
 background-size:cover;
 }
 
@@ -151,7 +151,7 @@ color:black;
 text-shadow: 3px 2px red;}
 .parallax {
   /* The image used */
-  background-image: url("image/kevin-laminto-osKdw8ih23U-unsplash.jpg");
+  background-image: url("https://github.com/Yashggoswami/Tour-Website.github.io/blob/master/image/kevin-laminto-osKdw8ih23U-unsplash.jpg");
 
   /* Set a specific height */
   min-height: 700px;
